eventsourcing adicionado