@@ -7,7 +7,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,13 +22,12 @@ public class EventGateway {
     public List<Event> getAllEvents() {
         return eventRepository.findAll().stream()
                 .map(eventGatewayMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Event> getEventsByAggregateId(final Long aggregateId) {
         return eventRepository.findByAggregateId(aggregateId).stream()
                 .map(eventGatewayMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
-
 }
